@@ -105,3 +105,54 @@ int32_t SPVM__Net__SSLeay__OCSP__basic_verify(SPVM_ENV* env, SPVM_VALUE* stack) 
   
   return 0;
 }
+
+int32_t SPVM__Net__SSLeay__OCSP__basic_add1_cert(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_resp = stack[0].oval;
+  
+  void* obj_cert = stack[1].oval;
+  
+  if (!obj_resp) {
+    return env->die(env, stack, "The OCSP_BASICRESP object $resp must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  if (!obj_cert) {
+    return env->die(env, stack, "The X509 object $cert must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  OCSP_BASICRESP* resp = env->get_pointer(env, stack, obj_resp);
+  
+  X509* cert = env->get_pointer(env, stack, obj_cert);
+  
+  int32_t status = OCSP_basic_add1_cert(resp, cert);
+  
+  if (!(status == 1)) {
+    int64_t ssl_error = ERR_peek_last_error();
+    
+    char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
+    ERR_error_string_n(ssl_error, ssl_error_string, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE);
+    
+    env->die(env, stack, "[OpenSSL Error]OCSP_basic_add1_cert failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    
+    return error_id;
+  }
+  
+  // OCSP_basic_add1_certy increments the reference count of cert.
+  {
+    void* obj_certs_list = env->get_field_object_by_name(env, stack, obj_resp, "certs_list", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    
+    stack[0].oval = obj_certs_list;
+    stack[1].oval = obj_cert;
+    env->call_instance_method_by_name(env, stack, "push", 2, &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+  }
+  
+  stack[0].ival = status;
+  
+  return 0;
+}
